S1511-050 - Fix alignement of icons in header

--- a/css/less/bootstrap/rules/navbar.less
+++ b/css/less/bootstrap/rules/navbar.less
@@ -83,7 +83,7 @@
     
       > li{
         > a{ 
-          color:darken(@header-bg, 47%);
+          color:darken(@header-bg, 57%);
           padding-bottom: 0;
           padding-top: 0;
           line-height: 64px;
@@ -91,9 +91,10 @@
           span{
             vertical-align: middle;
             font-size:  @font-size-base + 11;
-          }
+            top : 0px;
+          }   
         }
-        
+             
         &.active{
           > a{
             color: @active-green;
